# firepack

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: index.html
docs/firepack/: data.html  errors.html  fields.html  index.html  service.html  validators.html
examples/: basic.py  custom_field.py  nested_list.py  object_serialization.py
firepack/: data.py  errors.py  fields.py  service.py  validators.py
tests/: test_data.py  test_fields.py  test_service.py
