[tool.poetry]
name = "firepack"
version = "0.1.0"
description = ""
authors = ["Kaustubh Pratap Chand <kpchand77@gmail.com>"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
